# python-weather

./: .gitignore  .readthedocs.yml  .style.yapf  LICENSE  MANIFEST.in  README.md  changelog.yml  codecov.yml  example.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: CI.yml  Test.yml  changelog.yml  publish.yml  release.yml  test.yml
config/: stanford.yaml
docs/: changelog.py  changelog.rst  client.rst  conf.py  donate.rst  github-donate.rst  index.rst  ko-fi-donate.rst  repository.rst  requirements.txt
docs/_static/: script.js  style.css
docs/forecast/: current_forecast.rst  daily_forecast.rst  hourly_forecast.rst  index.rst  weather.rst
python_weather/: __init__.py  base.py  cache.py  cli.py  client.py  constants.py  enums.py  errors.py  exceptions.py  forecast.py  response.py  rest.py  version.py  weather.py  xmltodict.py
python_weather.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: mock_response_1.json  mock_response_2.json  requirements.txt  test_client.py  test_enums.py  util.py
