[build-system]
requires = ["setuptools"]

[project]
name = "python-weather"
version = "0.5.0"
description = "A free and asynchronous weather API wrapper made in Python, for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "null8626" }]
keywords = ["weather", "api", "wrapper"]
dependencies = ["aiohttp==3.8.4"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: aiohttp",
  "Framework :: AsyncIO",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/null8626/python-weather"
download_url = "https://github.com/null8626/python-weather/archive/0.5.0.tar.gz"
