[build-system]
requires = ["setuptools"]

[project]
name = "python-weather"
version = "2.0.3"
description = "A free and asynchronous weather API wrapper made in Python, for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "null8626" }]
keywords = ["weather", "forecast", "weather-api", "weather-forecast"]
dependencies = ["aiohttp==3.9.5"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: aiohttp",
  "Framework :: AsyncIO",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.8"

[project.urls]
Donations = "https://ko-fi.com/null8626"
Changelog = "https://python-weather.readthedocs.io/en/latest/changelog.html"
Homepage = "https://python-weather.readthedocs.io/en/latest/"
Documentation = "https://python-weather.readthedocs.io/en/latest/"
Repository = "https://github.com/null8626/python-weather"